--- a/course.yaml
+++ b/course.yaml
@@ -1,3 +1,5 @@
-COURSE: DevSecOps with AWS
-DURATION: 4 months
-TRAINER: John Doe
+# COURSE: DevSecOps with AWS
+# DURATION: 4 months
+# TRAINER: John Doe
+
+NAME: this is from var-file
