--- a/inventory.ini
+++ b/inventory.ini
@@ -4,7 +4,9 @@
 [local]
 localhost
 
-[local:vars]
-COURSE=Ansible
-DURATION=10HRS
-TRAINER=Allanki
+; [local:vars]
+; COURSE=Ansible
+; DURATION=10HRS
+; TRAINER=Allanki
+
+NAME: from inventory
