--- a/inventory.ini
+++ b/inventory.ini
@@ -4,9 +4,9 @@
 [local]
 localhost
 
-; [local:vars]
+[local:vars]
 ; COURSE=Ansible
 ; DURATION=10HRS
 ; TRAINER=Allanki
 
-NAME: from inventory
+NAME=from inventory
