--- a/vars-preference.yaml
+++ b/vars-preference.yaml
@@ -4,10 +4,10 @@
   become: yes
   vars:
     NAME: this is from play level
-  vars_prompt:
-  - name: NAME
-    prompt: what is u r NAME?
-    private: false
+  # vars_prompt:
+  # - name: NAME
+  #   prompt: what is u r NAME?
+  #   private: false
   # vars_files:
   # - course.yaml
   tasks:
@@ -18,6 +18,7 @@
        msg: "Name: {{ NAME }}"
 
 #preference order
-#  from ->arguments or cli
-# from task level
-# from vars-file(course.yaml)
+# 1)from ->arguments or cli
+# 2)from task level
+# 3)from vars-file(course.yaml)
+# 4)from -> vars_prompt
