--- a/loops1.yaml
+++ b/loops1.yaml
@@ -5,9 +5,9 @@
   tasks:
   - name: loop through packages
     ansible.builtin.package:
-      name: "{{ item }}"
-      state: latest 
+      name: "{{ item.name }}"
+      state: "{{ item.state}} " 
     loop:
-     - nginx
-     - mysql
-     - redis
+     - { name: "nginx", state: "latest" }
+     - { name: "mysql", state: "absent" }
+     - { name: "redis", state: "absent" }
