--- a/functions.yaml
+++ b/functions.yaml
@@ -8,6 +8,12 @@
     dict:
       technology: DEVSECOPS
       scope: finding-it's-way
+  # list to dictionary
+    list:
+      - nanonacho
+        hakunamatata
+        ironman
+        wanda maxmioff
   
   tasks:
   - name: print hello with undefined variable
@@ -22,5 +28,9 @@
   - name: dictionaries to list
     ansible.builtin.debug:
        msg: "dict are: {{ dict | dict2items }}" 
+
+  - name: list to dictionary
+    ansible.builtin.debug:
+      msg: "list are {{ list | items2dict }}"
 
 
