--- a/functions.yaml
+++ b/functions.yaml
@@ -43,7 +43,7 @@
        msg: "json: {{ student_yaml | to_json }}"
     
   - name: save json to file
-    ansible.builtin.debug:
+    ansible.builtin.copy:
       dest: ./student-data.json
       content: "{{ student_yaml | to_nice_json }}"
        
