--- a/ec2-r53.yaml
+++ b/ec2-r53.yaml
@@ -21,6 +21,6 @@
     loop: "{{ instance }}"
     register: ec2_output
 
-  - name: print the ec2_output
+  - name: print the ec2_output   #
     ansible.builtin.debug:
       msg: "{{ ec2_output }}" 
