--- a/ec2-r53.yaml
+++ b/ec2-r53.yaml
@@ -11,7 +11,7 @@
   tasks:
   - name: create ec2 instance
     amazon.aws.ec2_instance:
-      name: "{{ item }}"
+      name: "{{ item }}"    #item represents the output in the loop
       instance_type: t3.micro
       security_group: "{{ sg_id }}"
       image_id: "{{ ami_id }}"
@@ -22,4 +22,17 @@
 
   - name: print the ec2_output   #
     ansible.builtin.debug:
-      msg: "{{ ec2_output }}" 
+       msg: "{{ ec2_output }}" 
+
+  - name: print public_ip
+    ansible.builtin.debug:
+       msg: "{{ item.instances[0].public_ip_address }}"
+    loop: "{{ ec2_output.results }}"
+
+  - name: print private_ip
+    ansible.builtin.debug:
+       msg: "{{ item.instances.[0].private_ip_address }}"
+    loop: "{{ ec2_output.results }}"
+    
+
+ 
