--- a/ec2-r53.yaml
+++ b/ec2-r53.yaml
@@ -31,7 +31,7 @@
 
   - name: print private_ip
     ansible.builtin.debug:
-       msg: "{{ item.instances.[0].private_ip_address }}"
+       msg: "{{ item.instances[0].private_ip_address }}"
     loop: "{{ ec2_output.results }}"
     
 
