--- a/ec2-r53.yaml
+++ b/ec2-r53.yaml
@@ -24,15 +24,25 @@
     ansible.builtin.debug:
        msg: "{{ ec2_output }}" 
 
-  - name: print public_ip
-    ansible.builtin.debug:
-       msg: "{{ item.instances[0].public_ip_address }}"
-    loop: "{{ ec2_output.results }}"
+  # - name: print public_ip
+  #   ansible.builtin.debug:
+  #      msg: "{{ item.instances[0].public_ip_address }}"
+  #   loop: "{{ ec2_output.results }}"
 
-  - name: print private_ip
-    ansible.builtin.debug:
-       msg: "{{ item.instances[0].private_ip_address }}"
-    loop: "{{ ec2_output.results }}"
+  # - name: print private_ip
+  #   ansible.builtin.debug:
+  #      msg: "{{ item.instances[0].private_ip_address }}"
+  #   loop: "{{ ec2_output.results }}"
     
 
- 
+- name: create route53
+  amazon.aws.route53:
+    state: 
+    zone: "{{ domain_name }}"
+    record: "{{ item.item }}.{{ domain_name }}" #-> #mongodb.kolanu.space# item=instances  item=mongodb in ec2_output   #mongodb.kolanu.space
+    
+    type: A
+    ttl: 1
+    value: "{{ item.instances[0].public_ip_address }}"
+    overwrite: true
+    loop: "{{ ec2_output.results }}"
