--- a/ec2-r53.yaml
+++ b/ec2-r53.yaml
@@ -37,7 +37,7 @@
 
   - name: create route53
     amazon.aws.route53:
-      state: present
+      state: absent
       zone: "{{ domain_name }}"
       record: "{{ item.item }}.{{ domain_name }}" #-> #mongodb.kolanu.space# item=instances  item=mongodb in ec2_output   #mongodb.kolanu.space
       type: A
